# -PRINT_MODE-SHADER-

./: .gitmodules  CMakeLists.txt  README.glsl  fragment.shader  t3.py  testbed.py  vertex.shader
print_shader/: .cproject  .gitignore  .project  CMakeLists.txt  KeybindingScreen.cpp  basics.cpp  command_line.cpp  dfapi_glue.cpp  enabler.cpp  enabler.h  enabler_input.cpp  find_files.cpp  fragment.shader  fugr_dump.cc  g_basics.h  grab-shaders.py  graphics.cpp  graphics.h  init.cpp  init.h  interface.cpp  keybindings.cpp  keybindings.h  music_and_sound_openal.cpp  music_and_sound_v.h  renderer_glsl.hpp  renderer_opengl.hpp  template.h  testbed.py  textures.cpp  ttf_manager.cpp  vertex.shader
print_shader/shaders/: cbr_is_bold.fs  cbr_is_bold.vs  rect.fs  rect.vs  standard.fs  standard.vs
